fix: edit description and delete excess spaces

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <p class="name__description">Frontend developer</p>
     <hr class="name__hr">
     <h2 id="me">About me:</h2>
-    <p>Hi there! My name is Slava. I'm 29. Now I working in mining and processing plant. Ten years ago I with my friend created a website with films. It was a wonderfull expirience. Now I learning in Rolling Scope School. I want to be a good developer. </p>
+    <p>Hi there! My name is Slava. I'm 29. Now I'm working in mining and processing plant. Ten years ago I with my friend created a website with films. It was a wonderful experience. Now I'm learning in Rolling Scope School. I want to be a good developer. </p>
     <hr>
     <h2 id="skills">My skills:</h2>
       <ul class="skills">
@@ -71,7 +71,7 @@ function multiply (a, b) {
 return a * b
 }</code>
     </pre>
-     <h2 id="projects">My project: <span class="description">The webste with movies</span></h2>
+     <h2 id="projects">My project: <span class="description">The website with movies</span></h2>
     <ul class="my-project">
       <li class="my-projects__item">My website address: <a class="my-projects__item-link" href="http://kinooskars.ru" target="_blank">http://kinooskars.ru</a></li>
       <li class="my-projects__item">GitHub: <a class="my-projects__item-link" href="https://github.com/SlaVR7/kinooskars.ru" target="_blank">https://github.com/SlaVR7/kinooskars.ru</a></li>
@@ -94,7 +94,6 @@ return a * b
     <a class="rs-logo" href="https://rs.school/js/" target="_blank">
        <img src="assets/img/rs_school_js.svg" alt="RS School logo">
     </a>
-    
       </footer>
     </div>
   </body>
